# emotions

./: Cargo.toml  README.md  build.rs
resources/: estyle.css  estylebk.css  gresources.xml
src/: main.rs  res_loader.rs  simple_ui.rs  style.css  win_clip.rs
src/emotions_app/: mod.rs
src/emotions_app/app/: mod.rs
src/emotions_app/app/queries/: app_query.rs  emotion_search_client.rs  emotion_search_query_app.rs  mod.rs
src/emotions_app/core/: common_error.rs  mod.rs
src/emotions_app/domain/: mod.rs
src/emotions_app/infra/: mod.rs
src/emotions_app/infra/client/: emotion_finder_client.rs  emotion_search_client_imp.rs  mod.rs
src/gif_paintable/: frame.rs  mod.rs
src/gif_paintable_window/: mod.rs
src/learn_test/: common_error.rs  mod.rs
