[package]
name = "gtk-one"
version = "0.1.0"
edition = "2021"
subsystem = "windows"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gtk-one"
path = "./src/main.rs"
#required-features = ["image"]
subsystem = "windows"
#需要watch -n 1 sccache -s
#[build]
#rustc-wrapper = "~/.cargo/bin/sccache"

[dependencies]
#gdk-wayland = { git = "http://github.com/gtk-rs/gtk4-rs.git", package = "gdk4-wayland" }
gtk = { version = "0.6.4", package = "gtk4", features = ["v4_8"]}
windows = { version = "0.48", features = ["Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_DataExchange","Win32_System_Memory","Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_Shell_Common",
    "implement",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_System_Ole",
    "Win32_UI_WindowsAndMessaging",
]}
serde_json = { version = "1.0"}

#clap = { version = "4.1.8", features = ["derive"] }
#infer = {version="0.13.0"}
#opener = {version="0.5.2"}
#url = {version="2.3.1"}
reqwest = { version = "0.11.16", features = ["json","blocking","gzip"] }
image = "0.24"
urlencoding = "2.1.2"

[build-dependencies]
glib-build-tools = "0.17.0"
# used by gif-paintable example

#tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 'z'
lto = true